fix bug introduced by edits and use async data for api calls

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Marie-Denise Jolie">
     <title>Marie's Montreal Pins</title>
     <link rel="stylesheet" href="css/main.css">
@@ -42,7 +43,8 @@
 
   </div>
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBL6mtgfjEKbXS33H5ArRvu49vlgzt-prI">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBL6mtgfjEKbXS33H5ArRvu49vlgzt-prI&callback=initMap"
+    async defer>
   </script>
   <script src="js/lib/knockout-3.4.2.js"></script>
   <script src="js/lib/jquery-3.2.1.min.js"></script>
