--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="options-box">
      <h1>Montreal Pins</h1>
      <div class="placesDiv">
-       <select data-bind="value: selectedFilter,options: filtersList,
+       <select class='selector' data-bind="value: selectedFilter,options: filtersList,
         optionsText: 'name', optionsValue: 'number', optionsCaption: '-- Filters--'"> 
        </select>
        <p></p>
